#summary ChangeLog for fookebox
#labels Featured,Phase-Deploy

== 0.5.2 (xx xxx 2010) ==

 * Use mpd's "consume" command if available (versions >= 0.15)
 * Added support for in-directory cover art
 * Cover art can now be cached
 * Auto-queuing can now be limited to a specific genre
 * Albums are now properly sorted on the search result page

== 0.5.1 (07 Jul 2010) ==

 * Catch some more exceptions and properly close all connections if they occur
 * Added classifiers to setup.py
 * fookebox' version information is now read from the package meta data

== 0.5.0 (01 Jul 2010) ==

 * Re-implemented fookebox in Python (using Pylons)
 * Added support for rhythmbox' covert art file naming scheme
 * Added German translation

== 0.4.3 (21 Jun 2010) ==

 * Fixed a possible race-condition where a song would get played twice in a row
 * Synchronized javascript with upcoming 0.5 release
 * Artist, genre names and cover paths are now base64 encoded

== 0.4.2 (24 May 2010) ==

 * Database rebuild was broken, fixed
 * Fixed typo in README

== 0.4.1 (23 Mar 2010) ==

 * Thanks to Gavin Cameron for his contributions
 * Can now pick the auto-queued songs from a predefined playlist
 * Some internal code cleanup
 * Changed license to GPLv3
 * Set the default time zone to UTC to get PHP to shut up (Gavin)
 * Replaced calls to split (deprecated) with explode (Gavin)
 * Added support for cover art for compilations (Gavin again, also: see README)
 * Added the ability to auto queue songs before the playlist is empty

== 0.4.0 (4 Feb 2010) ==

 * Fixed queuing of full albums
 * Added support for cover art
 * Minor CSS changes
 * Some internal code cleanup
 * We now need at least PHP 5.1.0
 * Updated smarty to version 2.6.26
 * Updated prototype to version 1.6.1
 * Updated scriptaculous to version 1.8.3

== 0.3.0 (11 May 2009) ==

 * Dropped php4 compatibility
 * Albums in search results are now automatically expanded
 * Added support for forward/back buttons
 * Fixed filename/any search